--- a/babskeny/public/index.html
+++ b/babskeny/public/index.html
@@ -56,6 +56,7 @@
       ga('create', 'UA-XXXXX-Y', 'auto');
       ga('send', 'pageview');
   </script>
+  <script src="../src/routes/home/home.js"></script>
   <!-- End Google Analytics -->
 </head>
 <body>
